open graph 추가 및 수정본

--- a/about/css/about-mobile.css
+++ b/about/css/about-mobile.css
@@ -57,9 +57,96 @@
   right: 21px;
 }
 
-/* 사이트맵 */
+/* site-map */
 .site_map {
   display: none;
+}
+
+.site_map_open {
+  display: block;
+}
+
+/* site_map 상단*/
+
+.site_map {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: #fff;
+  padding: 20px;
+  z-index: 1000;
+}
+
+.site_map_upper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.site_map_logo a img {
+  width: 100x;
+  height: 40px;
+}
+
+/* site_map 하단*/
+
+.site_map_nav {
+  height: 100%;
+}
+
+.site_map_dep1_ul {
+  display: flex;
+  flex-direction: column;
+  padding-top: 30px;
+  text-align: left;
+}
+
+.site_map_dep1_li {
+  margin-top: 30px;
+  border-bottom: 1px solid #666;
+  position: relative;
+}
+
+.site_map_dep1_li > a {
+  font-size: 25px;
+  color: #000;
+  font-weight: 500;
+}
+
+.site_map_dep1_li::after {
+  content: "";
+  width: 0px;
+  height: 3px;
+  background: var(--main);
+  position: absolute;
+  top: 40px;
+  transition: 0.5s;
+}
+
+.site_map_dep1_li:hover::after {
+  width: 130px;
+}
+
+.site_map_dep2_ul {
+  max-height: 0;
+  overflow: hidden;
+  margin: 10px 0;
+  transition: 1s;
+}
+
+.site_map_dep2_li {
+  margin-top: 10px;
+}
+
+.site_map_dep2_li > a {
+  font-size: 20px;
+  color: var(--sub);
+}
+
+.site_map_dep1_li:hover > ul {
+  max-height: 20px;
 }
 
 /* sub-banner */
