--- a/main/css/index-mobile.css
+++ b/main/css/index-mobile.css
@@ -174,9 +174,6 @@
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
-  /* position: relative; */
-}
-.main_bn_title {
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -184,12 +181,14 @@
   align-items: center;
   text-align: center;
 }
+.main_bn_title {
+  margin-bottom: 20px;
+}
 
 .main_bn_title h3 {
   font-size: 24px;
   font-weight: 500;
   color: #fff;
-  margin-bottom: 20px;
 }
 .main_bn_title h2 {
   font-size: 28px;
@@ -197,7 +196,7 @@
   color: #fff;
   margin-top: 70px;
 }
-.main_bn_title > p {
+.main_bn > p {
   font-size: 16px;
   font-weight: 700;
   color: var(--sub);
