--- a/main/css/index-pc.css
+++ b/main/css/index-pc.css
@@ -212,47 +212,53 @@ nav > ul {
 
 /* main-banner */
 .main_bn {
-  height: 100vh;
+  width: 100vw;
+  height: calc(100vh - 90px);
   background-image: url(../images/main-visual\ 1.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   position: relative;
 }
 
+.main_bn_title {
+  width: 1000px;
+  height: 306px;
+  position: absolute;
+  top: 342px;
+  left: 104px;
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+  align-items: flex-start;
+}
+
 .main_bn_title h2 {
-  font-size: 60px;
-  font-weight: 500;
-  line-height: 9rem;
+  font-size: 50px;
+  font-weight: 700;
+  /* line-height: 30px; */
   color: #fff;
-  position: absolute;
-  top: 300px;
-  left: 116px;
 }
-.main_bn_title > h3 {
-  position: absolute;
-  left: 116px;
-  bottom: 400px;
-}
+
 .main_bn_title h3 {
   font-size: 45px;
   font-weight: 500;
   color: #fff;
 }
-.main_bn_title p {
+
+.main_bn p {
   font-size: 30px;
   font-weight: 700;
   color: var(--sub);
   text-align: center;
-  border: 2px solid #fff;
   background-color: #fff;
   border-radius: 50px;
   padding: 10px 10px;
   line-height: 3rem;
-  width: 350px;
+  width: 330px;
   height: 75px;
   position: absolute;
-  bottom: 250px;
-  left: 118px;
+  top: 600px;
+  left: 104px;
 }
 
 /* about */
