--- a/main/css/index-pc.css
+++ b/main/css/index-pc.css
@@ -1,26 +1,24 @@
 /* header */
 
 .header {
+  width: 100vw;
   height: 90px;
   display: flex;
   justify-content: space-between;
-  padding: 0 40px;
+  align-items: center;
   z-index: 1;
-}
-
-.header a {
-  color: #000;
 }
 
 /* header 좌측 로고 */
 
-.logo a img {
-  width: 231px;
-  height: 90px;
+.header .logo {
+  width: 185px;
+  height: 72px;
+  margin-left: 20px;
 }
 
-.logo {
-  height: 90px;
+.header .logo a > img {
+  width: 100%;
   display: flex;
   align-items: center;
 }
@@ -28,7 +26,7 @@
 /* header 중앙 GNB */
 
 nav {
-  height: 90px;
+  height: 80px;
 }
 
 nav > ul {
@@ -38,6 +36,8 @@ nav > ul {
 .dep1_ul {
   height: 100%;
   display: flex;
+  align-items: center;
+  justify-content: center;
   position: relative;
   z-index: 100;
 }
@@ -49,6 +49,9 @@ nav > ul {
   justify-content: center;
   align-items: center;
   text-align: center;
+}
+
+.dep1_li {
 }
 
 .dep1_li::after {
@@ -82,6 +85,7 @@ nav > ul {
 .dep2_li {
   margin-bottom: 10px;
 }
+
 .dep2_li:hover {
   background-color: aliceblue;
   color: var(--sub);
@@ -90,37 +94,61 @@ nav > ul {
 /* header 우측 ui */
 
 .header_ui {
-  height: 90px;
   display: flex;
-  align-items: center;
-  position: relative;
 }
 
 .mall {
   display: flex;
   align-items: center;
+  margin-right: 34px;
 }
-
-.mall > a {
-  color: var(--main);
-  margin-right: 20px;
+.mall .mall-image {
+  width: 28px;
+  height: 28px;
 }
-.lang {
-  height: 100%;
-}
-
-.lang a {
-  display: flex;
-  align-items: center;
-  margin-left: 20px;
-  margin-right: 50px;
-  height: 100%;
+.mall .mall-image img {
   width: 100%;
 }
 
-.m_btn a {
+.mall .mall-text > a {
+  color: var(--main);
+}
+.mall .between {
+  margin-left: 34px;
+}
+
+.lang {
   display: flex;
   align-items: center;
+  margin-left: 20px;
+}
+
+.lang .lang-image {
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+}
+.lang .lang-image img {
+  width: 100%;
+}
+
+.lang p {
+  font-size: 18px;
+  margin-left: 10px;
+}
+
+.m_btn {
+  margin-left: 70px;
+  margin-right: 50px;
+  display: flex;
+  align-self: center;
+}
+.m_btn a {
+  width: 18px;
+  height: 16px;
+}
+.m_btn a img {
+  width: 100%;
 }
 
 /* site_map */
@@ -213,7 +241,8 @@ nav > ul {
 /* main-banner */
 .main_bn {
   width: 100vw;
-  height: calc(100vh - 90px);
+  /* height: calc(100vh - 90px); */
+  height: 100vh;
   background-image: url(../images/main-visual\ 1.jpg);
   background-size: cover;
   background-repeat: no-repeat;
