--- a/main/css/index-mobile.css
+++ b/main/css/index-mobile.css
@@ -174,6 +174,9 @@
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
+  /* position: relative; */
+}
+.main_bn_title {
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -181,14 +184,12 @@
   align-items: center;
   text-align: center;
 }
-.main_bn_title {
-  margin-bottom: 20px;
-}
 
 .main_bn_title h3 {
   font-size: 24px;
   font-weight: 500;
   color: #fff;
+  margin-bottom: 20px;
 }
 .main_bn_title h2 {
   font-size: 28px;
@@ -196,7 +197,7 @@
   color: #fff;
   margin-top: 70px;
 }
-.main_bn > p {
+.main_bn_title > p {
   font-size: 16px;
   font-weight: 700;
   color: var(--sub);
@@ -281,7 +282,9 @@
   display: flex;
   flex-direction: column;
 }
-
+.product a {
+  color: #000;
+}
 .product1 {
   text-align: center;
 }
