--- a/main/css/index-pc.css
+++ b/main/css/index-pc.css
@@ -1,24 +1,26 @@
 /* header */
 
 .header {
-  width: 100vw;
   height: 90px;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  padding: 0 40px;
   z-index: 1;
+}
+
+.header a {
+  color: #000;
 }
 
 /* header 좌측 로고 */
 
-.header .logo {
-  width: 185px;
-  height: 72px;
-  margin-left: 20px;
+.logo a img {
+  width: 231px;
+  height: 90px;
 }
 
-.header .logo a > img {
-  width: 100%;
+.logo {
+  height: 90px;
   display: flex;
   align-items: center;
 }
@@ -26,7 +28,7 @@
 /* header 중앙 GNB */
 
 nav {
-  height: 80px;
+  height: 90px;
 }
 
 nav > ul {
@@ -36,8 +38,6 @@ nav > ul {
 .dep1_ul {
   height: 100%;
   display: flex;
-  align-items: center;
-  justify-content: center;
   position: relative;
   z-index: 100;
 }
@@ -49,9 +49,6 @@ nav > ul {
   justify-content: center;
   align-items: center;
   text-align: center;
-}
-
-.dep1_li {
 }
 
 .dep1_li::after {
@@ -85,7 +82,6 @@ nav > ul {
 .dep2_li {
   margin-bottom: 10px;
 }
-
 .dep2_li:hover {
   background-color: aliceblue;
   color: var(--sub);
@@ -94,61 +90,37 @@ nav > ul {
 /* header 우측 ui */
 
 .header_ui {
+  height: 90px;
   display: flex;
+  align-items: center;
+  position: relative;
 }
 
 .mall {
   display: flex;
   align-items: center;
-  margin-right: 34px;
-}
-.mall .mall-image {
-  width: 28px;
-  height: 28px;
-}
-.mall .mall-image img {
-  width: 100%;
 }
 
-.mall .mall-text > a {
+.mall > a {
   color: var(--main);
+  margin-right: 20px;
 }
-.mall .between {
-  margin-left: 34px;
+.lang {
+  height: 100%;
 }
 
-.lang {
+.lang a {
   display: flex;
   align-items: center;
   margin-left: 20px;
-}
-
-.lang .lang-image {
-  width: 20px;
-  height: 20px;
-  margin-right: 10px;
-}
-.lang .lang-image img {
-  width: 100%;
-}
-
-.lang p {
-  font-size: 18px;
-  margin-left: 10px;
-}
-
-.m_btn {
-  margin-left: 70px;
   margin-right: 50px;
-  display: flex;
-  align-self: center;
-}
-.m_btn a {
-  width: 18px;
-  height: 16px;
-}
-.m_btn a img {
+  height: 100%;
   width: 100%;
+}
+
+.m_btn a {
+  display: flex;
+  align-items: center;
 }
 
 /* site_map */
@@ -240,8 +212,6 @@ nav > ul {
 
 /* main-banner */
 .main_bn {
-  width: 100vw;
-  /* height: calc(100vh - 90px); */
   height: 100vh;
   background-image: url(../images/main-visual\ 1.jpg);
   background-size: cover;
@@ -249,45 +219,40 @@ nav > ul {
   position: relative;
 }
 
-.main_bn_title {
-  width: 1000px;
-  height: 306px;
-  position: absolute;
-  top: 342px;
-  left: 104px;
-  display: flex;
-  flex-direction: column;
-  justify-content: left;
-  align-items: flex-start;
-}
-
 .main_bn_title h2 {
-  font-size: 50px;
-  font-weight: 700;
-  /* line-height: 30px; */
+  font-size: 60px;
+  font-weight: 500;
+  line-height: 9rem;
   color: #fff;
+  position: absolute;
+  top: 300px;
+  left: 116px;
 }
-
+.main_bn_title > h3 {
+  position: absolute;
+  left: 116px;
+  bottom: 400px;
+}
 .main_bn_title h3 {
   font-size: 45px;
   font-weight: 500;
   color: #fff;
 }
-
-.main_bn p {
+.main_bn_title p {
   font-size: 30px;
   font-weight: 700;
   color: var(--sub);
   text-align: center;
+  border: 2px solid #fff;
   background-color: #fff;
   border-radius: 50px;
   padding: 10px 10px;
   line-height: 3rem;
-  width: 330px;
+  width: 350px;
   height: 75px;
   position: absolute;
-  top: 600px;
-  left: 104px;
+  bottom: 250px;
+  left: 118px;
 }
 
 /* about */
@@ -361,8 +326,12 @@ nav > ul {
 .product-contents {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  gap: 40px;
 }
-
+.product a {
+  color: #000;
+}
 .product1 {
   text-align: center;
 }
@@ -378,6 +347,10 @@ nav > ul {
 .product1 p {
   font-size: 20px;
   font-weight: 400;
+}
+
+.product i {
+  color: var(--sub);
 }
 
 .product .main_btn {
