main 제품 정보 - 이전/다음 버튼 클릭 시 이미지 넘기기

--- a/main/css/index-mobile.css
+++ b/main/css/index-mobile.css
@@ -282,13 +282,23 @@
   display: flex;
   flex-direction: column;
 }
+.product2 {
+  display: none;
+}
 .product a {
   color: #000;
 }
 .product1 {
   text-align: center;
+  border: 2px solid forestgreen;
 }
-.product1 img {
+/* 여기서부터 다시!!!!!모바일! */
+.product1 .product-img {
+  width: 280px;
+  height: 284px;
+  border: 1px solid red;
+}
+.product1 .product-img img {
   width: 100%;
 }
 
@@ -301,9 +311,9 @@
   font-size: 16px;
   font-weight: 400;
 }
-.product .btn-box {
-  display: flex;
-  justify-content: center;
+.product #pre-btn,
+#next-btn {
+  display: none;
 }
 
 .product .main_btn {
