--- a/main/css/index-pc.css
+++ b/main/css/index-pc.css
@@ -13,16 +13,18 @@
 }
 
 /* header 좌측 로고 */
-
-.logo a img {
-  width: 231px;
-  height: 90px;
-}
-
 .logo {
   height: 90px;
   display: flex;
   align-items: center;
+}
+
+.logo a {
+  width: 231px;
+  height: 90px;
+}
+.logo a img {
+  width: 100%;
 }
 
 /* header 중앙 GNB */
@@ -35,8 +37,9 @@ nav > ul {
   font-size: 16px;
 }
 
+/* depth */
 .dep1_ul {
-  height: 100%;
+  height: 90px;
   display: flex;
   position: relative;
   z-index: 100;
@@ -90,37 +93,76 @@ nav > ul {
 /* header 우측 ui */
 
 .header_ui {
-  height: 90px;
   display: flex;
   align-items: center;
-  position: relative;
 }
 
 .mall {
   display: flex;
   align-items: center;
 }
+.mall .mall-img {
+  width: 28px;
+  height: 28px;
+}
+.mall .mall-img img {
+  width: 100%;
+}
 
 .mall > a {
   color: var(--main);
   margin-right: 20px;
 }
-.lang {
-  height: 100%;
-}
 
-.lang a {
+/* 번역 */
+.hd_lang {
   display: flex;
   align-items: center;
-  margin-left: 20px;
-  margin-right: 50px;
-  height: 100%;
+  justify-content: center;
+  gap: 5px;
+  margin: 0 40px 0 20px;
+}
+.hd_lang a {
+  width: 24px;
+  height: 24px;
+  display: flex;
+  align-items: center;
+}
+.hd_lang a img {
   width: 100%;
+}
+.goog-te-gadget {
+  width: 100px;
+  outline: 1px solid #ccc;
+  display: flex;
+  padding: 3px 8px;
+  background: #fff;
+  border-radius: 5px;
+  margin-left: 5px;
+}
+.goog-te-gadget,
+.goog-te-gadget-simple {
+  border-style: none !important;
+}
+.goog-te-gadget-simple img {
+  display: none;
+}
+.goog-te-menu-value span {
+  margin-right: 1rem;
+}
+.goog-te-menu-value span:nth-of-type(1) {
+  margin-right: 1rem;
+}
+.goog-te-menu-value span[style^="border"] {
+  display: none;
 }
 
 .m_btn a {
-  display: flex;
-  align-items: center;
+  width: 24px;
+  height: 24px;
+}
+.m_btn a img {
+  width: 100%;
 }
 
 /* site_map */
@@ -300,10 +342,15 @@ nav > ul {
   width: 160px;
   height: 60px;
   margin-bottom: 100px;
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
 
 .about .main_btn > a {
   color: var(--sub);
+}
+.about .main_btn:hover {
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.12), 0 1px 3px rgba(0, 0, 0, 0.24);
+  transition: all ease 0.2s;
 }
 
 /* product */
@@ -412,6 +459,11 @@ nav > ul {
   color: var(--sub);
 }
 
+.product .main_btn:hover {
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.12), 0 1px 3px rgba(0, 0, 0, 0.24);
+  transition: all ease 0.2s;
+}
+
 /* Ethical management */
 .ethic {
   width: 1520px;
@@ -458,6 +510,10 @@ nav > ul {
 
 .ethic .main-btn > a {
   color: var(--sub);
+}
+.ethic .main-btn:hover {
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.12), 0 1px 3px rgba(0, 0, 0, 0.24);
+  transition: all ease 0.2s;
 }
 
 /* Innovative Drug development */
@@ -506,6 +562,11 @@ nav > ul {
 
 .develop-box .main-btn > a {
   color: #fff;
+}
+
+.develop-box .main-btn:hover {
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.12), 0 1px 3px rgba(0, 0, 0, 0.24);
+  transition: all ease 0.2s;
 }
 
 /* news */
@@ -570,6 +631,10 @@ nav > ul {
 .text-box .main-btn > a {
   color: var(--sub);
 }
+.text-box .main-btn:hover {
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.12), 0 1px 3px rgba(0, 0, 0, 0.24);
+  transition: all ease 0.2s;
+}
 
 /* recruit */
 
@@ -627,8 +692,13 @@ nav > ul {
   left: 0;
 }
 
-.text-box .main-btn > a {
+.recruit .text-box .main-btn > a {
   color: var(--sub);
+}
+
+.recruit .text-box .main-btn:hover {
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.12), 0 1px 3px rgba(0, 0, 0, 0.24);
+  transition: all ease 0.2s;
 }
 
 /* footer */
