--- a/main/css/index-mobile.css
+++ b/main/css/index-mobile.css
@@ -419,7 +419,7 @@
   margin: 0 auto;
 }
 .develop-box {
-  background-image: url(..//images/development.jpg);
+  background-image: url(../main/images/development.jpg);
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -478,7 +478,7 @@
 .news-img {
   width: 280px;
   height: 240px;
-  background-image: url(/main/images/news.jpg);
+  background-image: url(../main/images/news.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -539,7 +539,7 @@
 .recruit-img {
   width: 280px;
   height: 240px;
-  background-image: url(/main/images/with.jpg);
+  background-image: url(../main/images/with.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
