--- a/main/css/index-pc.css
+++ b/main/css/index-pc.css
@@ -586,7 +586,7 @@ nav > ul {
 .news-img {
   width: 900px;
   height: 560px;
-  background-image: url(../images/news.jpg);
+  background-image: url(../images/with.jpg);
   background-position: center center;
   background-size: cover;
 }
